--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
       <p class="hero-eyebrow">Open to Opportunities · Edmonton, AB</p>
       <h1 class="hero-title">Sahir<br><span>Momin</span></h1>
       <p class="hero-sub">
-        AI and ML Engineer building production-grade intelligent systems,
-        from LLM pipelines and RAG architectures to real-time computer vision.
+        AI, ML, and software engineer building production-grade intelligent systems, from LLM pipelines and RAG architectures to full-stack applications and real-time computer vision.
       </p>
       <div class="hero-cta">
         <a href="#projects" class="btn btn-primary">View Projects</a>
@@ -187,7 +186,7 @@
         <div class="project-arrow">→</div>
       </a>
 
-      <a href="https://github.com/smomin1" class="project-card reveal reveal-delay-1" target="_blank" rel="noopener">
+      <a href="https://github.com/CMPUT497/PROJECT-SemEval26-05" class="project-card reveal reveal-delay-1" target="_blank" rel="noopener">
         <div class="project-num">03</div>
         <div class="project-title">Computational Semantics &amp; LLM Pipelines</div>
         <div class="project-desc">End-to-end LLM pipelines using transformer-based models and Hugging Face. Incorporates RAG with embedding pipelines and vector similarity search to ground outputs and reduce hallucinations. Benchmarked across inference latency and retrieval accuracy.</div>
