--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="hero-bg"></div>
     <div class="hero-grid"></div>
     <div class="hero-content">
-      <p class="hero-eyebrow">Open to Opportunities · Edmonton, AB</p>
+      <p class="hero-eyebrow">Open to Opportunities</p>
       <h1 class="hero-title">Sahir<br><span>Momin</span></h1>
       <p class="hero-sub">
         AI, ML, and software engineer building production-grade intelligent systems, from LLM pipelines and RAG architectures to full-stack applications and real-time computer vision.
