changes to about

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
             <img src="images/display_picture.png" alt="Sahir Momin" class="about-photo"
               onerror="this.parentElement.classList.add('photo-placeholder')" />
           </div>
-          <div class="photo-badge">
+          <!-- <div class="photo-badge">
             <span class="badge-dot"></span>
             Open to Work
-          </div>
+          </div> -->
         </div>
         <div class="about-text reveal reveal-delay-1">
           <p>I'm a <strong>Computer Science graduate from the University of Alberta</strong> with a deep focus on AI, machine learning, and production-grade software engineering. I love building systems that are not just technically sound, but genuinely useful.</p>
